--- a/Nodejs/RTCS/admin/index.html
+++ b/Nodejs/RTCS/admin/index.html
@@ -52,7 +52,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">History</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -70,7 +70,7 @@
           </table>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Customer support</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
